Import of XSAWYERX/Perlbal-Plugin-ExpandSSL-0.02.tar.gz from CPAN.
gitpan-cpan-distribution: Perlbal-Plugin-ExpandSSL
gitpan-cpan-version:      0.02
gitpan-cpan-path:         XSAWYERX/Perlbal-Plugin-ExpandSSL-0.02.tar.gz
gitpan-cpan-author:       XSAWYERX
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -4,9 +4,10 @@ author:
   - 'Sawyer X <xsawyerx@cpan.org>'
 build_requires:
   Test::More: 0
+  Test::Warn: 0
 configure_requires:
   Module::Build: 0.36
-generated_by: 'Module::Build version 0.3603'
+generated_by: 'Module::Build version 0.3607'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,7 +16,7 @@ name: Perlbal-Plugin-ExpandSSL
 provides:
   Perlbal::Plugin::ExpandSSL:
     file: lib/Perlbal/Plugin/ExpandSSL.pm
-    version: 0.01
+    version: 0.02
 requires:
   Crypt::X509: 0
   File::Slurp: 0
@@ -24,4 +25,4 @@ requires:
   perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.02
